# noisy_turtle_playback

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  open_clion.sh  package.xml  rosdoc.yaml
config/: config.yaml
include/noisy_turtle_playback/: GaussianNoiseGenerator.hpp  NoisyTurtlePlayback.hpp
launch/: noisy_turtle_playback.launch
src/: GaussianNoiseGenerator.cpp  NoisyTurtlePlayback.cpp  noisy_turtle_playback_node.cpp
test/: GaussianNoiseGeneratorTest.cpp  test_noisy_turtle_playback.cpp
