<?xml version="1.0"?>
<package format="2">
  <name>noisy_turtle_playback</name>
  <version>0.1.0</version>
  <description>A package that generates Gaussian noise and adds it to velocity readings from odometry</description>
  <maintainer email="sd13535@outlook.com">Sandip Das</maintainer>
  <license>BSD</license>


  <url type="website">http://github.com/real-Sandip-Das/noisy_turtle_playback</url>
  <url type="bugtracker">http://github.com/real-Sandip-Das/noisy_turtle_playback/issues</url>


  <author email="sd13535@outlook.com">Sandip Das</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <test_depend>gtest</test_depend>
  <doc_depend>doxygen</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
